ecosystem/nginx-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ecosystem-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - secretName: tls-secret
  rules:
    - http:
        paths:
          - path: /users-service
            backend:
              serviceName: user-service
              servicePort: 9092
          - path: /number-service
            backend:
              serviceName: number-service
              servicePort: 9091
          - path: /gamification-service
            backend:
              serviceName: gamification-service
              servicePort: 9093
          - path: /leaderboard-service
            backend:
              serviceName: leaderboard-service
              servicePort: 9094
